[#41] pawan/shubham - solved overlapping problem
What changes have you made?

* added functionalities to solve overlapping problem

Why do we need this change?

* when two or more players coins are in a safe cell every should be visible and can be to selectable

--- a/public/css/board.css
+++ b/public/css/board.css
@@ -212,7 +212,7 @@ p {
   text-align: left;
   overflow-y: scroll;
   height: 94%;
-  background: rgba(255,255,255,0.7);
+  background: rgba(182,187,197,0.7);
   padding: 10px;
 }
 
